--- a/WalletWatcher/Base.lproj/Main.storyboard
+++ b/WalletWatcher/Base.lproj/Main.storyboard
@@ -34,6 +34,9 @@
                                     <constraint firstAttribute="height" constant="50" id="w10-as-l14"/>
                                 </constraints>
                                 <state key="normal" title="Create Wallet"/>
+                                <connections>
+                                    <segue destination="cES-MY-nA6" kind="presentation" identifier="createWalletModal" id="4nt-XW-VbE"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2aW-hb-EYk">
                                 <rect key="frame" x="16" y="552" width="150" height="50"/>
@@ -80,10 +83,188 @@
                             </view>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="COw-Ax-z8g" kind="show" identifier="walletSegue" id="DbL-jA-658"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="781.60000000000002" y="777.66116941529242"/>
+        </scene>
+        <!--Budget-->
+        <scene sceneID="fCx-Eh-K5U">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="COw-Ax-z8g" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wod-Zw-aRp"/>
+                        <viewControllerLayoutGuide type="bottom" id="z24-az-YPp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="woO-HL-GXD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xqO-AW-9Qu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="VA5-hq-a20"/>
+                                </items>
+                            </navigationBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RUK-5R-zn3">
+                                <rect key="frame" x="16" y="64" width="343" height="603"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LVh-1s-eO5">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="453"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </tableView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tNT-jT-GHx">
+                                        <rect key="frame" x="193" y="506" width="150" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Add Expense"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uRT-ev-dpq">
+                                        <rect key="frame" x="0.0" y="506" width="150" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Add Income"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="LVh-1s-eO5" firstAttribute="leading" secondItem="RUK-5R-zn3" secondAttribute="leading" id="HgD-Uo-rTI"/>
+                                    <constraint firstAttribute="trailing" secondItem="LVh-1s-eO5" secondAttribute="trailing" id="Pkd-LP-kLq"/>
+                                    <constraint firstItem="LVh-1s-eO5" firstAttribute="top" secondItem="RUK-5R-zn3" secondAttribute="top" id="cgw-ch-nYO"/>
+                                    <constraint firstAttribute="bottom" secondItem="LVh-1s-eO5" secondAttribute="bottom" constant="150" id="dp5-TY-N8K"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RUK-5R-zn3" firstAttribute="top" secondItem="wod-Zw-aRp" secondAttribute="bottom" id="BkI-EN-p9s"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RUK-5R-zn3" secondAttribute="trailing" id="edh-7A-a7k"/>
+                            <constraint firstItem="z24-az-YPp" firstAttribute="top" secondItem="RUK-5R-zn3" secondAttribute="bottom" id="gC0-AW-evB"/>
+                            <constraint firstItem="RUK-5R-zn3" firstAttribute="leading" secondItem="woO-HL-GXD" secondAttribute="leadingMargin" id="kf3-8T-9Pk"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Budget" id="aYA-Nh-D2V">
+                        <barButtonItem key="rightBarButtonItem" style="done" id="9vj-hW-WyQ">
+                            <view key="customView" contentMode="scaleToFill" id="3ui-UT-Us6">
+                                <rect key="frame" x="276" y="5" width="83" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zff-66-aHQ">
+                                        <rect key="frame" x="-9" y="4" width="100" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="6BQ-Zj-Hro"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Zff-66-aHQ" firstAttribute="bottom" secondItem="3ui-UT-Us6" secondAttribute="bottomMargin" id="iuC-7S-m1a"/>
+                                    <constraint firstItem="Zff-66-aHQ" firstAttribute="centerX" secondItem="3ui-UT-Us6" secondAttribute="centerX" id="jmt-LW-eYx"/>
+                                </constraints>
+                            </view>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kcn-Ld-DaB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1528.8" y="777.66116941529242"/>
+        </scene>
+        <!--Create Expense Modal View Controller-->
+        <scene sceneID="T8c-Yf-l1V">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="formSheet" id="cES-MY-nA6" customClass="CreateExpenseModalViewController" customModule="WalletWatcher" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Xgf-AR-gy7"/>
+                        <viewControllerLayoutGuide type="bottom" id="OPM-oP-sMe"/>
+                    </layoutGuides>
+                    <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Z9m-Kj-Qn3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YF4-Ti-Peb">
+                                <rect key="frame" x="72" y="126" width="57" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="57" id="hA4-9d-fGo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Income" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NqQ-7s-OCk">
+                                <rect key="frame" x="72" y="185" width="57" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="xMk-rU-XiK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KXO-zb-4zr">
+                                <rect key="frame" x="180" y="186" width="97" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gti-SC-fuy">
+                                <rect key="frame" x="72" y="284" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="cNI-b8-poY"/>
+                                </constraints>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelTapped:" destination="cES-MY-nA6" eventType="touchUpInside" id="EVz-AF-34u"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mzg-wn-YTg">
+                                <rect key="frame" x="201" y="284" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="cNP-Rw-gn2"/>
+                                </constraints>
+                                <state key="normal" title="Enter"/>
+                                <connections>
+                                    <action selector="enterTapped:" destination="cES-MY-nA6" eventType="touchUpInside" id="uPZ-rt-Xqi"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5cs-r6-qgU">
+                                <rect key="frame" x="178" y="126" width="101" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="KXO-zb-4zr" firstAttribute="leading" secondItem="NqQ-7s-OCk" secondAttribute="trailing" constant="51" id="3MA-cp-QWu"/>
+                            <constraint firstItem="Mzg-wn-YTg" firstAttribute="centerX" secondItem="KXO-zb-4zr" secondAttribute="centerX" constant="-2.5" id="510-6E-vW4"/>
+                            <constraint firstItem="NqQ-7s-OCk" firstAttribute="top" secondItem="Xgf-AR-gy7" secondAttribute="bottom" constant="165" id="9Vx-Xn-Ooa"/>
+                            <constraint firstItem="OPM-oP-sMe" firstAttribute="top" secondItem="Mzg-wn-YTg" secondAttribute="bottom" constant="353" id="CBd-eM-11y"/>
+                            <constraint firstItem="Mzg-wn-YTg" firstAttribute="top" secondItem="KXO-zb-4zr" secondAttribute="bottom" constant="68" id="HUq-N1-hrd"/>
+                            <constraint firstItem="Mzg-wn-YTg" firstAttribute="baseline" secondItem="Gti-SC-fuy" secondAttribute="baseline" id="Lbi-yF-auI"/>
+                            <constraint firstItem="YF4-Ti-Peb" firstAttribute="leading" secondItem="Z9m-Kj-Qn3" secondAttribute="leadingMargin" constant="56" id="QTz-2F-qdx"/>
+                            <constraint firstItem="YF4-Ti-Peb" firstAttribute="top" secondItem="NqQ-7s-OCk" secondAttribute="bottom" constant="-92" id="Raq-HP-N3d"/>
+                            <constraint firstAttribute="trailing" secondItem="Mzg-wn-YTg" secondAttribute="trailing" constant="124" id="VIJ-Nw-gTp"/>
+                            <constraint firstItem="NqQ-7s-OCk" firstAttribute="centerX" secondItem="YF4-Ti-Peb" secondAttribute="centerX" id="X77-ou-snK"/>
+                            <constraint firstItem="NqQ-7s-OCk" firstAttribute="leading" secondItem="Z9m-Kj-Qn3" secondAttribute="leadingMargin" constant="56" id="XI0-eJ-L70"/>
+                            <constraint firstItem="Mzg-wn-YTg" firstAttribute="leading" secondItem="Gti-SC-fuy" secondAttribute="trailing" constant="79" id="aYe-Ua-big"/>
+                            <constraint firstItem="OPM-oP-sMe" firstAttribute="top" secondItem="YF4-Ti-Peb" secondAttribute="bottom" constant="508" id="hNr-AR-SLi"/>
+                            <constraint firstItem="5cs-r6-qgU" firstAttribute="leading" secondItem="YF4-Ti-Peb" secondAttribute="trailing" constant="49" id="uTN-8s-3bn"/>
+                            <constraint firstItem="Mzg-wn-YTg" firstAttribute="centerX" secondItem="5cs-r6-qgU" secondAttribute="centerX" constant="-2.5" id="w8b-QA-9ym"/>
+                            <constraint firstItem="5cs-r6-qgU" firstAttribute="top" secondItem="YF4-Ti-Peb" secondAttribute="top" id="yfT-It-ndl"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="incomeField" destination="KXO-zb-4zr" id="Rvq-5i-GlN"/>
+                        <outlet property="titleField" destination="5cs-r6-qgU" id="2WJ-Cl-YQE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k0w-rO-cwT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="782" y="1566"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CJJ-0g-pbr">
